--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "sort-object": "^3.0.2",
     "xml2js": "^0.4.17",
     "create-error": "^0.3.1",
-    "checkit": "^0.7.0"
+    "checkit": "^0.7.0",
+    "moment":"^2.17.0"
   },
   "devDependencies": {
     "mocha": "^3.0.1",
