--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "mocha": "^3.0.1",
-    "chai": "^3.5.0",
+    "power-assert": "^1.4.2",
     "istanbul": "^0.4.4",
     "nock": "^8.1.0"
   },
