--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "qs": "^6.2.1",
     "sort-object": "^3.0.2",
     "xml2js": "^0.4.17",
-    "create-error": "^0.3.1",
-    "checkit": "^0.7.0",
+    "make-error": "^1.2.1",
+    "joi": "^10.2.2",
     "moment":"^2.17.0"
   },
   "devDependencies": {
