--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "xml2js": "^0.4.17",
     "make-error": "^1.2.1",
     "joi": "^10.2.2",
-    "moment":"^2.17.0"
+    "moment":"^2.17.0",
+    "co":"^4.6.0"
   },
   "devDependencies": {
     "mocha": "^3.0.1",
